...
  }, [authorized, location, cities]);
  return (
    <SafeAreaView style={styles.container}>
      <UnitSwitcher />
      <LocationPermission authorized={authorized} />
      <FlatList
        testID="location-list"
        data={items}
        renderItem={renderItem}
        ListFooterComponent={renderFooter}
      />
    </SafeAreaView>
  );
...
